samples/_failures_safe/1761408082_20bbb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20dcdc0e.c: In function ‘transform_apply’:
./samples/SAFE/__tmp_20dcdc0e.c:139:17: error: expected ‘;’ at end of input
  139 |     translated.z
      |                 ^
      |                 ;
./samples/SAFE/__tmp_20dcdc0e.c:139:5: error: expected declaration or statement at end of input
  139 |     translated.z
      |     ^~~~~~~~~~
